scrollbar design fix

--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -6,4 +6,9 @@
   &__search {
     letter-spacing: 0.2px;
   }
+  &__back-arrow {
+    height: 24px;
+    height: 24px;
+    background-color: $info-light;
+  }
 }
