--- a/src/sass/layout/_table.scss
+++ b/src/sass/layout/_table.scss
@@ -46,3 +46,31 @@
 .form-check-input[type='checkbox'] {
   border-radius: 1em !important;
 }
+
+.progress-bar {
+  height: 2px;
+  margin-top: 4px;
+}
+
+.table__icon--hash {
+  color: gray;
+  margin-right: 4px;
+  font-size: 16px;
+}
+
+.table__icon--info {
+  margin-left: 4px;
+}
+
+.table-wrapper {
+  overflow: auto;
+  max-height: 200px;
+  overflow-x: hidden;
+}
+
+thead tr:nth-child(1) th {
+  background: white;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
