--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -14,6 +14,7 @@ $info: #1276ff !default;
 $info-light: #eaf3ff !default;
 $info-light-1: #dbebff;
 $border-color: #dfe6f0 !default;
+$icon-bg: #f3f4f8 !default;
 
 $font-size-sm: 0.875em; //14ox
 $font-size-esm: 0.75em; //12px
